[project]
name = "pr-review-env"
version = "1.0.0"
description = "PR Review Agent OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic",
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"